# images-sorter

./: .dockerignore  CHANGELOG.md  DOCKER_README.md  GPU_DEPLOYMENT_SUMMARY.md  GPU_SETUP.md  README-DEV.md  SECURITY.md  deploy-dev.sh  docker-compose.dev.yml  install-gpu-support.sh  main.py
src/backend/: .dockerignore  API_README.md  Dockerfile.dev  main.py  pyproject.toml  run_api.py
src/backend/api/: api.py
src/backend/functions/: __init__.py  folders.py  image_processor.py
src/backend/test/: .coverage  README.md  TEST_SUMMARY.md  pytest.ini  requirements-test.txt  run_tests.py  test_api.py
src/frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  run_frontend.sh
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src/components/: FolderProcessor.css  FolderProcessor.tsx  ImagePreview.css  ImagePreview.tsx  ImageUploader.css  ImageUploader.tsx
src/frontend/src/config/: api.ts
src/frontend/test/: README.md  components.basic.test.tsx  frontend.test.tsx.disabled  install_and_test.sh  jest.config.js  package.json  setup.js  setupTests.ts  test-utils.tsx  tsconfig.json
src/frontend/test/mocks/: handlers.ts
