[project]
name = "project-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "einops>=0.8.1",
    "fastapi[standard]>=0.116.1",
    "huggingface-hub[cli]>=0.35.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.24.0",
    "transformers>=4.56.0",
]
